--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@ body {
   background-color: #E5E5E5;
 }
 
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 * {
   margin: 0;
   font-family: "Product Sans", "Kanit", FontAwesome, -apple-system,
