--- a/src/component/FullPageLoader/FullPageLoader.css
+++ b/src/component/FullPageLoader/FullPageLoader.css
@@ -12,4 +12,10 @@
     left: 50%;
     z-index: 1000;
     position: absolute;
+    text-align: center;
+}
+
+h1 { 
+    color: #93dbe9;
+    font-size: 20px;
 }
