--- a/src/component/searchbar/searchbar.css
+++ b/src/component/searchbar/searchbar.css
@@ -5,16 +5,16 @@
     justify-content: center;
     align-items: center;
     margin: 0.5rem 0;
-    transform: translate(42%, 0%);
+    transform: translate(40%, 0%);
   }
   .searchbar .container .searchbox {
     position: relative;
     display: block;
     width: 100%;
-    max-width: 53px;
+    max-width: 20px;
     transition: 0.4s linear;
-    overflow: hidden;
     transform: translate(0%, 50%);
+    text-align: right;
   }
   .container .searchbox .searchbox__input {
     display: block;
@@ -35,9 +35,9 @@
   }
   .container .searchbox .searchbox__icon {
     position: absolute;
-    right: calc(53px / 2);
+    left: 100;
     top: 50%;
-    transform: translate(50%, -50%);
+    transform: translate(-20%, -50%);
     width: 16px;
     height: 16;
     pointer-events: none;
@@ -48,11 +48,10 @@
   }
   .container .searchbox:focus-within {
     max-width: 300px;
-    transform: translate(-38%, 50%);
+    transform: translate(-45%, 50%);
   }
   .container .searchbox:focus-within .searchbox__input {
     background-color: #FFF;
-    padding-right: 50px;
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.4);
   }
   .container .searchbox:focus-within .searchbox__icon path {
