--- a/src/container/dashboardPage/dashboard.css
+++ b/src/container/dashboardPage/dashboard.css
@@ -32,6 +32,7 @@
         display: flex;
         flex-direction:row;
         background: rgb(192, 181, 181);
+        box-shadow: 5px 5px 10px rgb(0, 0, 0);
     }
     .parent .column {
         flex: 1 1 10px;
