--- a/src/container/dashboardPage/dashboard.css
+++ b/src/container/dashboardPage/dashboard.css
@@ -49,7 +49,7 @@
         align-items: center;
         text-shadow: 5px 5px 5px #eeb440;
     }
-    #todo{
+    /* #todo{
         background: url(https://raw.githubusercontent.com/Todona/todona_frontend/master/src/assets/images/todo.jpg) no-repeat 0 0%;
         background-size: cover;
         padding-bottom: height_of_image_in_px;
@@ -58,7 +58,7 @@
         background: url(https://raw.githubusercontent.com/Todona/todona_frontend/master/src/assets/images/done.png) no-repeat 0 0%;
         background-size: cover;
         padding-bottom: height_of_image_in_px;
-    }
+    } */
     .parent .column .card h1{
         font-size: 150px;
         color: #dd8437;
